# budabot-discord-amqp

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.py  main.py  pyproject.toml  requirements.txt  setup.cfg
relaybot/: __main__.py  client.py  models.py  utils.py
scripts/: add_transparency_to_images.py
