[tool.poetry]
name = "relaybot"
version = "0.1.0-dev"
description = "AMQP based Discord chat bridge to Anarchy Online (Budabot 4.2)"
license = "MIT"
authors = [
    "Jens Reidel <adrian@travitia.xyz>",
    "Nadyita <nadyita@hodorraid.org>"
]
readme = "README.md"
homepage = "https://github.com/Gelbpunkt/budabot-discord-amqp/"
repository = "git@github.com:Gelbpunkt/budabot-discord-amqp.git"
keywords = ["discord", "budabot", "anarchyonline", "amqp", "relay"]

[tool.poetry.scripts]
bot = "relaybot.__main__:run"

[[tool.poetry.source]]
name = "alpine-patches"
url = "https://packages.travitia.xyz/root/idle/+simple"
default = true

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.4.0-alpha.2412"
orjson = "^3.3.0"
uvloop = "^0.15.0-alpha.0"
aio-pika = "^6.6.1"

[tool.poetry.dev-dependencies]
black = { git = "https://github.com/psf/black.git", branch = "master" }
isort = { git = "https://github.com/timothycrosley/isort.git", branch = "master" }
flake9 = { git = "https://gitlab.com/retnikt/flake9.git", branch = "master" }

[tool.isort]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
force_grid_wrap = 0
line_length = 88
known_third_party = ["discord", "aio_pika"]
known_first_party = ["config"]
lines_between_types = 1

[tool.flake8]
extend-ignore = "E501,E203,E731,E231"
max-line-length = 88
per-file-ignores = ["relaybot/__main__.py:E402"]
